<resources>
    <string name="app_name">Instagram</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="logOut">Log Out</string>
    <string name="UploadPicture">Upload Picture</string>
    <string name="Submit">Post</string>
    <string name="Home">Home</string>
    <string name="add_pic">Add Picture</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>