<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/insta"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_instagram"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Username"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/insta"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:hint="@string/Password"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#A8009688"/>

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:text="Sign Up"
        android:backgroundTint="#811C38D6"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>